fixed @media query to display header on smaller screens

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+.header {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,8 +12,8 @@ header {
     margin-top: 120px; /* add top margin equal to nav height */
 }
 
-@media only screen and (max-width: 768px) {
-    header {
-        width: 100%;
+@media only screen and (max-width: 767px) {
+    .header {
+        width: 100%
     }
 }
